--- a/simple-project/index.html
+++ b/simple-project/index.html
@@ -8,6 +8,33 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="root">React not rendered</div>
+    <script src="https://unpkg.com/react@16.8.6/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@16.8.6/umd/react-dom.development.js"></script>
+    <script>
+        const Person = (props) => {
+            return React.createElement('div',{}, [
+                React.createElement('h1',{}, props.name),
+                React.createElement('p',{}, props.occupation)
+            ])
+        }
+        
+        class App extends React.Component {
+            render() {
+                return React.createElement('div', {}, [
+                React.createElement('h1', {}, 'React is RENDERED!!!'),
+                React.createElement(Person, { name: "Ricardo", occupation: "Future developer"}),
+                React.createElement(Person, { name: "Ricardo", occupation: "Future developer"}),
+                React.createElement(Person, { name: "Ricardo", occupation: "Future developer"})
+                ]
+            )
+            }
+        }
+
+        ReactDOM.render(
+            React.createElement(App),
+            document.getElementById('root')
+        )
+    </script>
 </body>
 </html>
